CheckConnection util added to project.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
         <item>Marshmallow</item>
         <item>Nexus</item>
     </array>
+    <string name="error_message_no_internet_connection">Conexão com a internet não encontrada.</string>
 </resources>
